--- a/login.kv
+++ b/login.kv
@@ -1,5 +1,3 @@
-#:include Chessboard.kv
-
 <Login>:
     BoxLayout
         id: login_layout
@@ -17,15 +15,13 @@
             Label:
                 text: 'Login'
                 font_size: 18
-                halign: 'left'
+
                 text_size: root.width-20, 20
 
             TextInput:
                 id: login
                 multiline:False
                 font_size: 28
-                write_tab: False
-                on_parent: root.setup_boxes
 
         BoxLayout:
             orientation: 'vertical'
@@ -41,7 +37,15 @@
                 password:True
                 font_size: 28
 
-        Button:
-            text: 'Login'
-            font_size: 24
-            on_press: root.do_login(login.text, password.text)
+        BoxLayout:
+            orientation: 'horizontal'
+
+            Button:
+                text: 'Login'
+                font_size: 24
+                on_press: root.do_login(login.text, password.text)
+
+            Button:
+                text: 'Nog geen account?'
+                font_size: 24
+                on_press: root.goto_register()
