--- a/overview.kv
+++ b/overview.kv
@@ -17,6 +17,7 @@
             size_hint: (.3, 0.05)
             size_hint_max_y: 25
             size_hint_min_x: 210
+            on_press: root.queue_new_random_game()
 
         GridLayout:
             canvas.before:
