Added caching of some functions
Function caching to prevent server hammering

--- a/login.kv
+++ b/login.kv
@@ -13,6 +13,32 @@
             orientation: 'vertical'
 
             Label:
+                text: 'Host adres'
+                font_size: 18
+                text_size: root.width-20, 20
+
+            TextInput:
+                id: host_address
+                multiline:False
+                font_size: 20
+
+        BoxLayout:
+            orientation: 'vertical'
+
+            Label:
+                text: 'Host poort'
+                font_size: 18
+                text_size: root.width-20, 20
+
+            TextInput:
+                id: host_port
+                multiline:False
+                font_size: 20
+
+        BoxLayout:
+            orientation: 'vertical'
+
+            Label:
                 text: 'Login'
                 font_size: 18
 
@@ -21,7 +47,7 @@
             TextInput:
                 id: login
                 multiline:False
-                font_size: 28
+                font_size: 20
 
         BoxLayout:
             orientation: 'vertical'
@@ -35,7 +61,7 @@
                 id: password
                 multiline:False
                 password:True
-                font_size: 28
+                font_size: 20
 
         BoxLayout:
             orientation: 'horizontal'
