Re organized code and client communication

--- a/Chessboard.kv
+++ b/Chessboard.kv
@@ -1,7 +1,7 @@
-#:include overview.kv
-#:include login.kv
-#:include register.kv
-#:include queue_for_game.kv
+#:include screens/overview.kv
+#:include screens/login.kv
+#:include screens/register.kv
+#:include screens/queue_for_game.kv
 
 <ChessCell>:
     set_hint: None, None
