--- a/Chessboard.kv
+++ b/Chessboard.kv
@@ -67,11 +67,17 @@
     size_hint: 1, None
     pos_hint: {'right': 1, 'top': .75}
     height: self.parent.height/2
-    TextInput:
-        disabled: True
-        text: self.parent.parent.parent.movebox_moves
-        # font_name: 'data/fonts/digital-7/digital-7'
-        font_size: 20
+    ScrollView:
+        scrol_type: ["bars", "content"]
+        bar_width: 6
+        do_scroll_x: False
+        TextInput:
+            disabled: True
+            height: max(self.minimum_height, self.parent.height)
+            size_hint: 1, None
+            text: self.parent.parent.parent.parent.movebox_moves
+            # font_name: 'data/fonts/digital-7/digital-7'
+            font_size: 20
 
 <ChessGame>:
     ChessboardCentered:
